src/ScratchDBMSParser.java
/* ScratchDBMSParser.java */
/* Generated By:JavaCC: Do not edit this line. ScratchDBMSParser.java */
import java.util.ArrayList;
import java.util.List;
import java.util.Iterator;
import javafx.util.Pair;

enum BufferName { DEFINITION, CONSTRAINT }

class Buffer {
    BufferName bn;
    ArrayList<String> arr;
    Attribute attr;

    public Buffer(BufferName bn, ArrayList<String> arr) {
        this.bn = bn;
        this.arr = arr;
    }

    public Buffer(BufferName bn, Attribute attr) {
        this.bn = bn;
        this.attr = attr;
    }

    public BufferName getBufferName() {
        return bn;
    }

    public ArrayList<String> getArr() {
        return arr;
    }

    public Attribute getAttr() {
        return attr;
    }
}

        public class ScratchDBMSParser implements ScratchDBMSParserConstants {
    private static Pair<Message, Attribute> getAttribute(Pair<String, String> tableColumn, String tablename) {
        String tn = tableColumn.getKey();
        String cn = tableColumn.getValue();

        Table t = DBManager.getDBManager().findTable(tablename);
        if (t == null)
            return new Pair<Message, Attribute>(new Message(MessageName.NO_SUCH_TABLE), null);

        Attribute attr = t.findAttributeAlias(cn);
        if (tn == null && attr != null)
            return new Pair<Message, Attribute>(null, attr);

        if (tn != null && DBManager.getDBManager().findTable(tn) == null &&
            DBManager.getDBManager().findTableAlias(tn) == null)
            return new Pair<Message, Attribute>(new Message(MessageName.WHERE_TABLE_NOT_SPECIFIED), null);
        if (t.hasAttribute(tn, cn)) {
            attr = t.findAttribute(cn);
            if (attr == null)
                return new Pair<Message, Attribute>(new Message(MessageName.WHERE_AMBIGUOUS_REFERENCE), null);
        }
        else {
            return new Pair<Message, Attribute>(new Message(MessageName.WHERE_COLUMN_NOT_EXIST), null);
        }

        return new Pair<Message, Attribute>(null, attr);
    }
        public static void main(String args[]) throws ParseException
        {
            Runtime.getRuntime().addShutdownHook(new Thread() {
              public void run() {
                Berkeley.getBerkeley().close();
              }
            });
            Berkeley.getBerkeley().open();
                ScratchDBMSParser parser = new ScratchDBMSParser(System.in);
                MessagePrinter.printPrompt();

                while (true)
                {
                        try
                        {
                                parser.command();
                        }
                        catch (Exception e)
                        {
                                MessagePrinter.printMessage(new Message(MessageName.SYNTAX_ERROR));
                                ScratchDBMSParser.ReInit(System.in);
                        }
                }
        }

  static final public void command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CREATE:
    case DROP:
    case DESC:
    case SHOW:
    case SELECT:
    case INSERT:
    case DELETE:{
      queryList();
      break;
      }
    case EXIT:{
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
System.exit(0);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void queryList() throws ParseException {Message m;
    label_1:
    while (true) {
      m = query();
MessagePrinter.printMessage(m);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CREATE:
      case DROP:
      case DESC:
      case SHOW:
      case SELECT:
      case INSERT:
      case DELETE:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  static final public Message query() throws ParseException {Message m;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CREATE:{
      m = createTableQuery();
if (m.getMessagename() == MessageName.CREATE_TABLE_SUCCESS)
                        Berkeley.getBerkeley().updateManager();
      break;
      }
    case DROP:{
      m = dropTableQuery();
if (m.getMessagename() == MessageName.DROP_SUCCESS)
                                Berkeley.getBerkeley().updateManager();
      break;
      }
    case DESC:{
      m = descQuery();
      break;
      }
    case SELECT:{
      m = selectQuery();
      break;
      }
    case INSERT:{
      m = insertQuery();
      break;
      }
    case DELETE:{
      m = deleteQuery();
      break;
      }
    case SHOW:{
      m = showTablesQuery();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

/* create table statement */
  static final public Message createTableQuery() throws ParseException {Token tok;
        String tablename;
        Table t;
        Message m = null;
        Message m1 = null;
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    tok = jj_consume_token(LEGAL_IDENT);
tablename = tok.toString().toLowerCase();
                        t = DBManager.getDBManager().findTable(tablename);
                        if (t != null)
                            m = new Message(MessageName.TABLE_EXISTENCE_ERROR);
                        t = new Table(tablename);
    m1 = tableElementList(t);
if (m != null)
                {if ("" != null) return m;}
            if (m1 != null)
                {if ("" != null) return m1;}
            DBManager.getDBManager().addTable(t);
            m = new Message(MessageName.CREATE_TABLE_SUCCESS);
            m.setNameArg(tablename);
            {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message tableElementList(Table t) throws ParseException {Message m = null;
    Buffer b;
    ArrayList<Attribute> attrList = new ArrayList<Attribute>();
    ArrayList<ArrayList<String>> arrList = new ArrayList<ArrayList<String>>();
    jj_consume_token(LEFT_PAREN);
    b = tableElement(t);
if (b.getBufferName() == BufferName.DEFINITION)
                        attrList.add(b.getAttr());
                    else
                        arrList.add(b.getArr());
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      b = tableElement(t);
if (b.getBufferName() == BufferName.DEFINITION)
                        attrList.add(b.getAttr());
                    else
                        arrList.add(b.getArr());
    }
    jj_consume_token(RIGHT_PAREN);
    jj_consume_token(SEMICOLON);
Iterator<Attribute> it1 = attrList.iterator();
            while (it1.hasNext()) {
                Attribute attr = it1.next();
                if (!attr.getAttributeType().isValid()) {
                    {if ("" != null) return new Message(MessageName.CHAR_LENGTH_ERROR);}
                }
                m = t.addAttribute(attr);
                if (m != null)
                    {if ("" != null) return m;}
            }
            Iterator<ArrayList<String>> it2 = arrList.iterator();
            while (it2.hasNext()) {
                ArrayList<String> arr = it2.next();
                if (arr.get(0).equals("0")) { // primary key definition
                    arr.remove(0);
                    m = t.setPrimaryKey(arr);
                    if (m != null)
                        {if ("" != null) return m;}
                }
                else {
                    arr.remove(0);
                    String tablename = arr.get(0);
                    arr.remove(0);
                    int index = arr.indexOf("2");
                    List<String> aList = arr.subList(0, index);
                    List<String> bList = arr.subList(index + 1, arr.size());
                Table foreign_table = DBManager.getDBManager().findTable(tablename);
                if (foreign_table == null)
                    {if ("" != null) return new Message(MessageName.REFERENCE_TABLE_EXISTENCE_ERROR);}
                else
                    m = t.setForeignKey(new ArrayList(aList), foreign_table, new ArrayList(bList));
                    if (m != null)
                        {if ("" != null) return m;}
                }
            }
            {if ("" != null) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public Buffer tableElement(Table t) throws ParseException {Attribute attr = null;
    ArrayList<String> arr = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEGAL_IDENT:{
      attr = columnDefinition(t);
      break;
      }
    case PRIMARY:
    case FOREIGN:{
      arr = tableConstraintDefinition(t);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
if (attr != null)
            {if ("" != null) return new Buffer(BufferName.DEFINITION, attr);}
        else
            {if ("" != null) return new Buffer(BufferName.CONSTRAINT, arr);}
    throw new Error("Missing return statement in function");
  }

  static final public Attribute columnDefinition(Table t) throws ParseException {Type typ;
        Token tok;
        String columnname;
        Attribute attr;
    tok = jj_consume_token(LEGAL_IDENT);
    typ = dataType();
columnname = tok.toString().toLowerCase();
                        attr = new Attribute(typ, columnname);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      jj_consume_token(NULL);
attr.setNotNull();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return attr;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> tableConstraintDefinition(Table t) throws ParseException {ArrayList<String> arr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRIMARY:{
      arr = primaryKeyConstraint(t);
      break;
      }
    case FOREIGN:{
      arr = referentialConstraint(t);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> primaryKeyConstraint(Table t) throws ParseException {ArrayList<String> arr;
    jj_consume_token(PRIMARY);
    jj_consume_token(KEY);
    arr = columnNameList();
arr.add(0,"0");
            {if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> referentialConstraint(Table t) throws ParseException {ArrayList<String> arr1;
    ArrayList<String> arr2;
    Token tok;
    String tablename;
    jj_consume_token(FOREIGN);
    jj_consume_token(KEY);
    arr1 = columnNameList();
    jj_consume_token(REFERENCES);
    tok = jj_consume_token(LEGAL_IDENT);
    arr2 = columnNameList();
tablename = tok.toString().toLowerCase();
                    arr1.add(0,"1");
                    arr1.add(1, tablename);
                    arr1.add("2");
                    arr1.addAll(arr2);
                    {if ("" != null) return arr1;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> columnNameList() throws ParseException {ArrayList<String> arr = new ArrayList<String>();
    Token tok;
    String s;
    jj_consume_token(LEFT_PAREN);
    tok = jj_consume_token(LEGAL_IDENT);
s = tok.toString().toLowerCase();
                    arr.add(s);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      tok = jj_consume_token(LEGAL_IDENT);
s = tok.toString().toLowerCase();
                    arr.add(s);
    }
    jj_consume_token(RIGHT_PAREN);
{if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public Type dataType() throws ParseException {Type t;
    Token tok;
    String intval;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
t = new Type(TypeName.INT, -1);
            {if ("" != null) return t;}
      break;
      }
    case CHAR:{
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      tok = jj_consume_token(INT_VALUE);
      jj_consume_token(RIGHT_PAREN);
intval = tok.toString();
                                    t = new Type(TypeName.CHAR, Integer.parseInt(intval));
                                    {if ("" != null) return t;}
      break;
      }
    case DATE:{
      jj_consume_token(DATE);
t = new Type(TypeName.DATE, -1);
                    {if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* drop table statement */
  static final public Message dropTableQuery() throws ParseException {Token tok;
        String tablename;
        Message m;
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    tok = jj_consume_token(LEGAL_IDENT);
    jj_consume_token(SEMICOLON);
tablename = tok.toString().toLowerCase();
                        m = DBManager.getDBManager().dropTable(tablename);
                        {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

/* desc statement */
  static final public Message descQuery() throws ParseException {Token tok;
        String tablename;
        Message m;
    jj_consume_token(DESC);
    tok = jj_consume_token(LEGAL_IDENT);
    jj_consume_token(SEMICOLON);
tablename = tok.toString().toLowerCase();
                    m = new Message(MessageName.DESC_TABLE);
                    m.setNameArg(tablename);
                        {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

/* show tables statement */
  static final public Message showTablesQuery() throws ParseException {
    jj_consume_token(SHOW);
    jj_consume_token(TABLES);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Message(MessageName.SHOW_TABLES);}
    throw new Error("Missing return statement in function");
  }

/* select statement */
  static final public Message selectQuery() throws ParseException {ArrayList<Pair<Pair<String, String>, String>> arr;
    Message m;
    jj_consume_token(SELECT);
    arr = selectList();
    m = tableExpression(arr);
{if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Pair<Pair<String, String>, String>> selectList() throws ParseException {ArrayList<Pair<Pair<String, String>, String>> arr = new ArrayList<Pair<Pair<String, String>, String>>();
    Pair<Pair<String, String>, String> p;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASTERISK:{
      jj_consume_token(ASTERISK);
{if ("" != null) return null;}
      break;
      }
    case LEGAL_IDENT:{
      p = selectedColumn();
arr.add(p);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        p = selectedColumn();
arr.add(p);
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public Pair<Pair<String, String>, String> selectedColumn() throws ParseException {Pair<String, String> tc;
    Token tok;
    String alias = null;
    tc = tableColumn();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AS:{
      jj_consume_token(AS);
      tok = jj_consume_token(LEGAL_IDENT);
alias = tok.toString().toLowerCase();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
{if ("" != null) return new Pair<Pair<String, String>, String>(tc, alias);}
    throw new Error("Missing return statement in function");
  }

  static final public Message tableExpression(ArrayList<Pair<Pair<String, String>, String>> columns) throws ParseException {Message m = null;
    Message m1 = null;
    BooleanValueExpression bve = new BooleanValueExpression();
    ArrayList<Pair<String, String>> tables;
    Pair<String, String> table;
    Table t;
    Pair<Pair<String, String>, String> column;
    String tablename, columnname, alias;
    Attribute attr;
    Table newTable = null;
    String newTablename = "";
    ArrayList<Attribute> newAttr = new ArrayList<Attribute>();
    ArrayList<Integer> projection = new ArrayList<Integer>();
    tables = fromClause();
Iterator<Pair<String, String>> itTable = tables.iterator();
            while (itTable.hasNext()) {
                table = itTable.next();
                t = DBManager.getDBManager().findTable(table.getKey());
                if (t == null) {
                     m = new Message(MessageName.SELECT_TABLE_EXISTENCE_ERROR);
                     m.setNameArg(table.getKey());
                     break;
                }
            t.setAlias(table.getValue());
            newAttr.addAll(t.getAttrList());
            newTablename += table.getKey();
            if (itTable.hasNext())
                newTablename += "@";
            }
            if (tables.size() != 1) {
            newTable = new Table(newAttr, newTablename);
            DBManager.getDBManager().addTable(newTable);
            }
            else {
                newTable = DBManager.getDBManager().findTable(newTablename);
            }
            if (m == null) {
                if (columns == null) {
                     projection = null;
                }
                else {
                Iterator<Pair<Pair<String, String>, String>> itColumn = columns.iterator();
                while (itColumn.hasNext()) {
                    column = itColumn.next();
                    tablename = column.getKey().getKey();
                    columnname = column.getKey().getValue();
                    alias = column.getValue();

                    if (newTable.hasAttribute(tablename, columnname)) {
                         attr = newTable.findAttribute(tablename, columnname);
                         if (attr == null) {
                            m = new Message(MessageName.SELECT_COLUMN_RESOLVE_ERROR);
                            m.setNameArg(columnname);
                            break;
                         }
                    }
                    else {
                        m = new Message(MessageName.SELECT_COLUMN_RESOLVE_ERROR);
                        m.setNameArg(columnname);
                        break;
                    }
                    attr.setAlias(alias);
                    projection.add(newTable.getAttrList().indexOf(attr));
                }
            }
            }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHERE:{
      m1 = whereClause(bve, newTablename);
if (m == null)
                        m = m1;
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
if (m == null) {
                if (bve.isEmpty()) {
                    Berkeley.getBerkeley().select(newTablename, null, projection);
                }
                else {
                    Berkeley.getBerkeley().select(newTablename, bve, projection);
                }
                m = new Message(MessageName.SELECT_SUCCESS);
            }
            if (tables.size() != 1) {
                DBManager.getDBManager().dropTable(newTablename);
            }
            {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Pair<String, String>> fromClause() throws ParseException {ArrayList<Pair<String, String>> arr;
    jj_consume_token(FROM);
    arr = tableReferenceList();
{if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Pair<String, String>> tableReferenceList() throws ParseException {ArrayList<Pair<String, String>> arr = new ArrayList<Pair<String, String>>();
    Pair<String, String> p;
    p = referredTable();
arr.add(p);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      p = referredTable();
arr.add(p);
    }
{if ("" != null) return arr;}
    throw new Error("Missing return statement in function");
  }

  static final public Pair<String, String> referredTable() throws ParseException {Token tok1;
    Token tok2;
    String tablename = null;
    String alias = null;
    tok1 = jj_consume_token(LEGAL_IDENT);
tablename = tok1.toString().toLowerCase();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AS:{
      jj_consume_token(AS);
      tok2 = jj_consume_token(LEGAL_IDENT);
alias = tok2.toString().toLowerCase();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
{if ("" != null) return new Pair<String, String>(tablename, alias);}
    throw new Error("Missing return statement in function");
  }

  static final public Message whereClause(BooleanValueExpression bve, String t) throws ParseException {Message m = null;
    jj_consume_token(WHERE);
    m = booleanValueExpression(bve, t);
{if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message booleanValueExpression(BooleanValueExpression b, String t) throws ParseException {Message m = null;
    Message m1 = null;
    /* eliminate left recursion */
             m = booleanTerm(b, t);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(OR);
      m1 = booleanTerm(b, t);
if (m == null) m = m1;
    }
{if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message booleanTerm(BooleanValueExpression b, String t) throws ParseException {Message m = null;
    Message m1 = null;
    BooleanTerm bt = new BooleanTerm();
    /* eliminate left recursion */
            m = booleanFactor(bt, t);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(AND);
      m1 = booleanFactor(bt, t);
if (m == null) m = m1;
    }
b.addTerm(bt);
            {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message booleanFactor(BooleanTerm bt, String t) throws ParseException {Message m = null;
    Token tok = null;
    BooleanFactor bf = new BooleanFactor();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      tok = jj_consume_token(NOT);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    m = booleanTest(bf, t);
if (tok != null)
                        bf.setNot();
                    bt.addFactor(bf);
                {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message booleanTest(BooleanFactor bf, String t) throws ParseException {Message m = null;
    BooleanTest bte = new BooleanTest();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEGAL_IDENT:
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:{
      m = predicate(bte, t);
      break;
      }
    case LEFT_PAREN:{
      m = parenthesizedBooleanExpression(bte, t);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
bf.setTest(bte);
            {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message parenthesizedBooleanExpression(BooleanTest bte, String t) throws ParseException {BooleanValueExpression bve = new BooleanValueExpression();
    ParenthesizedBooleanExpression pbe;
    Message m = null;
    jj_consume_token(LEFT_PAREN);
    m = booleanValueExpression(bve, t);
    jj_consume_token(RIGHT_PAREN);
pbe = new ParenthesizedBooleanExpression(bve);
        bte.setParen(pbe);
        {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public Message predicate(BooleanTest bte, String t) throws ParseException {Message m = null;
    Predicate pred = new Predicate();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEGAL_IDENT:{
      m = identifierPredicate(pred, t);
      break;
      }
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:{
      m = constantPredicate(pred, t);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
bte.setPredicate(pred);
            {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }
